--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
             <div class="row  justify-content-center">
                 <div class="col-6 justify-content-center">
                     <div th:if="${param.error}">
-                        Invalid username and password.
+                        <p class="text-center text-danger">Invalid username and password.</p>
                     </div>
                     <form th:action="@{/login}" method="post">
                         <div class="form-group row justify-content-center">
